--- a/client/package.json
+++ b/client/package.json
@@ -3,9 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "date-fns": "^2.8.1",
     "react": "^16.12.0",
+    "react-countup": "^4.2.3",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.2.0"
+    "react-scripts": "3.2.0",
+    "recharts": "^1.8.5"
   },
   "scripts": {
     "start": "react-scripts start",
