--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "date-fns": "^2.8.1",
+    "node-sass": "^4.13.0",
     "react": "^16.12.0",
     "react-countup": "^4.2.3",
     "react-dom": "^16.12.0",
